# IUtility_AI

./: Battery.cpp  Battery.h  CMakeLists.txt  CPUUsage.cpp  CPUUsage.h  getDiskUsage.cpp  getDiskUsage.h  getMemoryUsage.cpp  getMemoryUsage.h  getTopCPUProcessesWithImpact.cpp  getTopCPUProcessesWithImpact.h  main.cpp
